# InterIIT_Bosch

./: .gitignore  README.md  package-lock.json  package.json
.githooks/: post-commit  pre-commit
Augmentations/: README.md  aug.py  final_aug.py
Split_data/: README.md  split.py
Train-Test/: ReadMe.md  infer.py  models.py
app/: __init__.py  torchcommands.py
append_data/: README.md  append_to_gtsrb.py
cli/: cli.py  pyproject.toml
server/: Automold.py  Helpers.py  README.md  app.py  aug.py  configs.py  core.py  custom_types.py  dbmodels.py  dl_functions.py  dl_main.py  get_email.py  infer.py  models.py  predict.py  pyproject.toml  req_models.py  requrements.txt  run.py  snippet.py  utils.py
server/app/: __init__.py  auth.py  torchcommands.py
web/: .prettierrc.json  package-lock.json  package.json
web/src/: App.css  App.js
web/src/Components/Editor/: Editor.js  styles.css
web/src/Components/Home/: Home.js  styles.css
web/src/Components/ImageRow/: ImageRow.js  styles.css
web/src/Components/Infer/: Infer.js
web/src/Components/Landing/: Landing.js  Landing1.js  styles.css
web/src/Components/Logout/: Logout.js  styles.css
web/src/Components/Navbar/: Navbar.js
web/src/Components/PopupImage/: PopupImage.js
web/src/Components/Trainer/: Trainer.js
