[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["nikhil <ch17btech11023@iith.ac.in>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
